final changes prior to release